# CS2240-Pathtracer

./: CMakeLists.txt  README.md  main.cpp  pathtracer.cpp  pathtracer.h  pathtracer_milestone.cpp  submission-final.md
template_inis/milestone/: cornell_box_milestone.ini
